# fastapi-service-template

./: .env.template  .gitignore  Dockerfile  README.md  docker-compose.yaml  makefile  pyproject.toml
src/: main.py
src/application/: app.py
src/application/settings/: app.py  broker.py  db.py
src/application/settings/logger/: config.py  settings.py
src/controllers/: dependencies.py  exception_handlers.py  stub.py
src/controllers/routers/v1/: healthcheck.py
src/db/: declarative.py
src/db/tables/: base.py
src/dto/: base.py
src/dto/schemas/: exception.py  kafka.py  request.py  response.py
src/middleware/: cors.py
src/migrations/runner/: __main__.py  composite.py  config.py  env.py
src/repositories/: const.py  repo_base.py  uow_base.py
src/services/: const.py  errors.py  event_constructor.py  interfaces.py  uow.py
